<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/round_corner_item"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_image_black_24dp">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/fashion_and_apparel"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_sales"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gbp_6_872_32"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/main_layout"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/llBottomLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barChart"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/ic_monetization_on_black_24dp"
            android:scaleType="center" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/ic_shopping_basket_black_24dp"
            android:scaleType="center" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/ic_file_download_black_24dp"
            android:scaleType="center" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@drawable/ic_grid_on_black_24dp"
            android:scaleType="center" />
    </LinearLayout>

</RelativeLayout>